fixed overflow on landing page

--- a/src/main.css
+++ b/src/main.css
@@ -106,7 +106,6 @@ ul li a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  padding: 0 40px;
 }
 
 .content h1 {
